"fix: sửa lỗi PostgreSQL enum và lazy loading Backend: - Thêm @JdbcType cho enum status (SyllabusVersion, TeachingAssignment) - Thêm @EntityGraph để tránh lazy loading lỗi - Thêm các cột thiếu: edit_enabled, comments, resolved_by, resolved_at - Đổi tên migration V16->V19, V17->V20, V18->V21 tránh trùng Frontend: - Thêm config phân quyền theo role - Thêm hook useRolePermissions - Thêm hướng dẫn sử dụng APIs đã fix:  /api/syllabi?status=APPROVED  /api/student-feedbacks  /api/teaching-assignments"